# bigtwo

./: .cursorrules  .dockerignore  .env.production.example  .gitignore  CLAUDE.md  Cargo.toml  DATABASE_SETUP.md  DATA_MODEL.md  DEVELOPMENT.md  Dockerfile  GAME_REQUIREMENTS.md  GameLobbyModel.md  GameModel.md  README.md  STATS_IMPLEMENTATION_PLAN.md  STATS_REQUIREMENTS.md  docker-compose.dev.yml  railway.toml  rust.mdc
.github/workflows/: ci.yml  claude-code-review.yml
migrations/: 0002_add_last_accessed_to_sessions.sql  001_create_user_sessions.sql
scripts/: dev.sh  test-session.sh
src/: cards.rs  game.rs  gamemanager.rs  lib.rs  lobby.rs  main.rs  shared.rs
src/bot/: basic_strategy.rs  bot_room_subscriber.rs  handlers.rs  manager.rs  mod.rs  strategy_factory.rs  types.rs
src/event/: CLAUDE.md  bus.rs  dispatcher.rs  events.rs  handler.rs  mod.rs  room_handler.rs  room_subscription.rs
src/game/: CLAUDE.md  cards.rs  core.rs  game.rs  game_room_subscriber.rs  gamemanager.rs  logic.rs  mod.rs  repository.rs  service.rs
src/room/: CLAUDE.md  activity_room_subscriber.rs  activity_tracker.rs  cleanup_task.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs  types.rs
src/session/: CLAUDE.md  creator.rs  generators.rs  handlers.rs  middleware.rs  mod.rs  models.rs  repository.rs  service.rs  token.rs  types.rs
src/stats/: errors.rs  mod.rs  models.rs  repository.rs  service.rs
src/user/: mapping_service.rs  mod.rs
src/websockets/: CLAUDE.md  connection_manager.rs  handler.rs  (+6 more)
tests/: stats_room_subscriber_tests.rs  websocket_workflow_tests.rs
(+34 files in other folders)
