[package]
name = "bigtwo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
uuid = { version = "1.10", features = ["v4"] }
petname = "1.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower = { version = "0.4", features = ["util"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
rstest = "0.25"